--- a/Coffee Shop/Views/Home/Index.cshtml
+++ b/Coffee Shop/Views/Home/Index.cshtml
@@ -12,14 +12,22 @@
     <p><a class="btn btn-default" href="/Home/Registration">Register &raquo;</a></p>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Quantity</th>
+        <th>Price</th>
+    </tr>
 
-    </div>
-    <div class="col-md-4">
+    @for (int i = 0; i < ViewBag.Items.Count; i++)
+    {
+        <tr>
+            <td>@ViewBag.Items[i].Name</td>
+            <td>@ViewBag.Items[i].Description</td>
+            <td>@ViewBag.Items[i].Quantity</td>
+            <td>@ViewBag.Items[i].Price</td>
+        </tr>
+    }
 
-    </div>
-    <div class="col-md-4">
-
-    </div>
-</div>
+</table>
