--- a/Coffee Shop/Views/Home/Registration.cshtml
+++ b/Coffee Shop/Views/Home/Registration.cshtml
@@ -23,7 +23,7 @@
         <p>Would you like to substribe to our newsletter?<p>
             Yes <input type="radio" name="subscription" value="Subscribed" id="subsciption_yes" />
             No  <input type="radio" name="subscription" value="Not Subscribed" id="subsciption_no" />
-        <p><input type="submit" value="SUBMIT" /></p>
+        <p><input type="submit" value="Add Item" /></p>
     </fieldset>
 </form>
 
