--- a/Coffee Shop/Views/Home/NewUser.cshtml
+++ b/Coffee Shop/Views/Home/NewUser.cshtml
@@ -8,6 +8,7 @@
 
 <table>
     <tr>
+        <th>User ID</th>
         <th>First Name</th>
         <th>Last Name</th>
         <th>Phone Number</th>
@@ -15,13 +16,18 @@
         <th>Favorite Coffee</th>
         <th>Subscription Status</th>
     </tr>
-    <tr>
-        <td>@ViewBag.FirstName</td>
-        <td>@ViewBag.LastName</td>
-        <td>@ViewBag.Phone</td>
-        <td>@ViewBag.Email</td>
-        <td>@ViewBag.FavCoffee</td>
-        <td>@ViewBag.Subscription</td>
-    </tr>
+    @for (int i = 0; i < ViewBag.User.Count; i++)
+    {
+        <tr>
+            <td>@ViewBag.User[i].UserID</td>
+            <td>@ViewBag.User[i].FirstName</td>
+            <td>@ViewBag.User[i].LastName</td>
+            <td>@ViewBag.User[i].PhoneNumber</td>
+            <td>@ViewBag.User[i].FavoriteCoffee</td>
+            <td>@ViewBag.User[i].Subscription</td>
+        </tr>
+    }
 </table>
+
+@ViewBag.message<br />
 
