--- a/Coffee Shop/Views/Home/Index.cshtml
+++ b/Coffee Shop/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="jumbotron">
     <h1>Expresso</h1>
     <p>Sigining up gives you access needed to add, delete, and update the products.</p>
-    <p><a class="btn btn-default" href="/Home/Registration">Register &raquo;</a></p>
+    <p><a class="btn btn-default" href="/Users/Create">Register &raquo;</a></p>
 </div>
 
 <table>
