--- a/Coffee Shop/Views/Home/Registration.cshtml
+++ b/Coffee Shop/Views/Home/Registration.cshtml
@@ -8,21 +8,22 @@
 
 </head>
 
-<form id="register" action="/Home/NewUser" method="post" onsubmit="return confirmPassword(this)">
+<form id="register" action="/Users/Create" method="post" onsubmit="return confirmPassword(this)">
+    @Html.AntiForgeryToken()
     <fieldset>
         <legend>Registration Form</legend>
-        <p>First Name* <input type="text" class="input"name="firstName" required /></p>
+        <p>First Name* <input type="text" class="input" name="firstName" required /></p>
         <p>Last Name <input type="text" name="lastName" class="input" /></p>
-        <p>Email <input type="email" name="email" class="input"/></p>
-        <p>Phone Number <input type="number" name="phoneNumber" class="input"/></p>
-        <p>Password <input type="password" name="firstPassword" class="input"/></p>
+        <p>Email <input type="email" name="email" class="input" /></p>
+        <p>Phone Number <input type="number" name="phoneNumber" class="input" /></p>
+        <p>Password <input type="text" name="firstPassword" class="input" /></p>
         <span id="invalidPass"></span>
-        <p>Confirm Password <input type="password" name="passConf" class="input"/></p>
+        <p>Confirm Password <input type="text" name="passConf" class="input" /></p>
         <span id="passNoMatch"></span>
-        <p>Favorite Coffee <input type="text" name="favCoffee" class="input"/></p>
+        <p>Favorite Coffee <input type="text" name="favCoffee" class="input" /></p>
         <p>Would you like to substribe to our newsletter?<p>
-            Yes <input type="radio" name="subscription" value="Subscribed" id="subsciption_yes" />
-            No  <input type="radio" name="subscription" value="Not Subscribed" id="subsciption_no" />
+            Yes <input type="radio" name="subscription" value="1" id="subsciption_yes" />
+            No  <input type="radio" name="subscription" value="2" id="subsciption_no" />
         <p><input type="submit" value="Add Item" /></p>
     </fieldset>
 </form>
