--- a/Coffee Shop/Views/Shared/_Layout.cshtml
+++ b/Coffee Shop/Views/Shared/_Layout.cshtml
@@ -21,10 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Register", "Registration","Home")</li>
+                    <li>@Html.ActionLink("Home", "Index", "Users")</li>
+                    <li>@Html.ActionLink("Register", "Create","Users")</li>
                 </ul>
             </div>
         </div>
