--- a/Coffee Shop/Views/Shared/_Layout.cshtml
+++ b/Coffee Shop/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Users")</li>
                     <li>@Html.ActionLink("Register", "Create","Users")</li>
+                    <li>@Html.ActionLink("Menu", "Menu", "Home")</li>
                 </ul>
             </div>
         </div>
